fix z-index eventNav and button edit profil

--- a/src/components/EventNav/styles.scss
+++ b/src/components/EventNav/styles.scss
@@ -2,7 +2,7 @@
 .event-detail-nav {
   display: grid;
   position: sticky;
-  z-index: 2;
+  z-index: 1;
   top: 70px;
   grid-template-columns: 100%;
   width: 100%;
