--- a/src/components/Header/styles.scss
+++ b/src/components/Header/styles.scss
@@ -141,8 +141,6 @@
 .header-menu {
   position: fixed;
   z-index: 2;
-  z-index: 2;
-
   top: 70px;
   left: 0;
   height: 400px;
